[package]
name = "rusterf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
librp-sys = {path = "librp-sys", features = ["no_api"]}
zmq = "0.10"
serde = {version = "1.0", features = ["derive"]}
toml = "0.4"
gethostname = "0.4"
chrono = "0.4.23"
rand = "0.8.5"
rayon = "1.6.1"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.78"

[dev-dependencies]
criterion = "0.4.0"

[prfile.release]
opt-level = 3 
lto = true 
overflow-checks = false

[profile.bench]
# opt-level = 3
# lto = true

[[bench]]
name = "unit_bench"
harness = false
path = "src/unit_bench.rs"
