[package]
name = "rusterf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
librp-sys = {path = "librp-sys", features = ["no_api"]}
serde = {version = "1.0", features = ["derive"]}
toml = "0.4"
gethostname = "0.4"
chrono = "0.4.23"
rand = "0.8.5"
rayon = "1.6.1"
async-std = "1.12.0"
zeromq = {git = "https://github.com/zeromq/zmq.rs", default-features=false, features=["async-std-runtime", "tcp-transport"]}
futures = "0.3.26"
safe-transmute = "0.11.2"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.78"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
# pre-build = [
# 	"dpkg --add-architecture $CROSS_DEB_ARCH",
# 	"apt-get update && apt-get install --assume-yes libgsl-dev:$CROSS_DEB_ARCH",
# ]
dockerfile = "armv7.Dockerfile"

[dev-dependencies]
criterion = "0.4.0"

[prfile.release]
opt-level = 3 
lto = true 
overflow-checks = false
# opt-level = 3
# lto = true

[[bench]]
name = "unit_bench"
harness = false
path = "src/unit_bench.rs"
