[package]
name = "rusterf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# librp-sys = {path = "librp-sys", features = ["no_api_loud"]}
# librp-sys = {path = "librp-sys"}
serde = {version = "1.0", features = ["derive"]}
toml = "0.4"
gethostname = "0.4"
chrono = "0.4.23"
rand = "0.8.5"
rayon = "1.6.1"
async-std = "1.12.0"
zeromq = {git = "https://github.com/zeromq/zmq.rs", default-features=false, features=["async-std-runtime", "tcp-transport"]}
futures = "0.3.26"
safe-transmute = "0.11.2"
bytes = "1.4.0"

[target.'cfg(target_arch = "arm")'.dependencies]
librp-sys = {path = "librp-sys"}
[target.'cfg(not(target_arch = "arm"))'.dependencies]
librp-sys = {path = "librp-sys", features = ["no_api_loud"]}

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.78"

# [build]
# rustflags = [
# 	"-C", "target-feature=+crt-static",
# ]

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
dockerfile = "armv7.Dockerfile"

[package.metadata.cross.target.armv7-unknown-linux-musleabihf]
dockerfile = "armv7.Dockerfile"

[dev-dependencies]
criterion = "0.4.0"

[prfile.release]
opt-level = 3 
lto = true 
overflow-checks = false
# opt-level = 3
# lto = true

[[bench]]
name = "unit_bench"
harness = false
path = "src/unit_bench.rs"
